samples/_failures_safe/1761083564_a1c8bc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a48a4a6b.c: In function ‘kruskal_mst’:
./samples/SAFE/__tmp_a48a4a6b.c:139:16: error: expected declaration or statement at end of input
  139 |         struct Edge *next_edge = graph->edges + edge_index;
      |                ^~~~
./samples/SAFE/__tmp_a48a4a6b.c:139:16: error: expected declaration or statement at end of input
